# NullHandshake

./: GITHUB.md  README.md  main.py  nullhandshake.py  pyproject.toml  run.py  run_command.py
core/: __init__.py  config.py  framework.py  logger.py  plugin_manager.py  utils.py
instance/: nullhandshake.db
plugins/: __init__.py  credential_harvester_plugin.py  evil_twin_plugin.py  wifi_recon_plugin.py  wpa_handshake.py
plugins/phishing/: __init__.py  app.py
plugins/phishing/static/css/: custom.css
plugins/phishing/templates/: base.html  connecting.html  login.html
templates/: dashboard.html  help.html  history.html  index.html  login.html  plugin.html  scan.html  w.avif
