[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "netifaces>=0.11.0",
    "psycopg2-binary>=2.9.10",
    "rich>=14.0.0",
    "scapy>=2.6.1",
    "sqlalchemy>=2.0.40",
    "typer>=0.15.3",
    "werkzeug>=3.1.3",
]
